[package]
name = "gRPC_Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
git2 = "0.16.1"
gouth = "0.2.1"
prost = "0.11.8"
tokio = { version = "1.27.0", features = ["full"] }
tonic = { version = "0.9.0", features = ["tls", "tls-roots"] }

[build-dependencies]
git2 = "0.16.1"
tonic-build = "0.9.0"
